# wasmer-jni

./: build.sh
java/: build.gradle
java/src/test/java/com/archeros/wasmer/example/: Example.java
rust/: Cargo.toml
rust/src/: instance.rs  lib.rs  rp.rs  utils.rs
